--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "syspipe": "^0.1.5",
     "tar": "^3.2.1",
     "typescript": "^2.5.1",
+    "unzip": "^0.1.11",
     "uuid": "^3.1.0",
     "winston": "^2.3.1"
   },
